[gd_scene load_steps=2 format=3 uid="uid://cdtes12yvybtc"]

[ext_resource type="Script" path="res://scenes/pause/pause_screen.gd" id="1_y3e71"]

[node name="pause_screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3e71")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -219.0
offset_right = 219.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="lbl_paused" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="separator" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="btn_resume" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="btn_settings" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Settings"

[node name="btn_exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back to Menu"

[connection signal="pressed" from="Panel/VBoxContainer/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
